# drf-auth

./: README.md  TEST_REQUESTS.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
jwt_auth/: settings.py  urls.py
jwt_auth/jwt_auth/: settings.py
snack/: models.py  permissions.py  serializer.py  urls.py  views.py
snack/migrations/: 0001_initial.py
